# AndroidScreenProjectionIntoPC

./: Bitmap.cpp  Bitmap.h  CMakeLists.txt  EventCache.h  EventController.cpp  EventController.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FrameCache.h  README.md  SDL_Screen.cpp  SDL_Screen.h  SocketConnection.cpp  SocketConnection.h  log.h  main.cpp
